tests/ui/msg_send_id_underspecified.stderr
error[E0282]: type annotations needed
 --> ui/msg_send_id_underspecified.rs:7:33
  |
7 |     let _: &Object = &*unsafe { msg_send_id![obj, description].unwrap() };
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
  = note: this error originates in the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)
